--- a/.github/actions/generate-output/action.yml
+++ b/.github/actions/generate-output/action.yml
@@ -1,8 +1,13 @@
 ---
 name: 'Generate Output'
 description: 'Generates output foo without defining it in the metadata'
+outputs:
+  baz:
+    description: "Lorem ipsum"
 runs:
   using: "composite"
   steps:
     - shell: bash
       run: echo "foo=bar" >> $GITHUB_OUTPUT
+    - shell: bash
+      run: echo "baz=foo" >> $GITHUB_OUTPUT
